update base locations

--- a/index.html
+++ b/index.html
@@ -1,59 +1,63 @@
 <!doctype html>
 <html lang="en">
 <head>
-
-    <!-- Required meta tags -->
+    <!-- Meta tags -->
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <meta content="Researcher, TikTok" name="description">
     <meta content="Qian Liu" name="author">
     <meta content="#222222" name="theme-color">
 
+    <!-- Favicon -->
     <link href="images/nicons/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
-    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" rel="stylesheet">
-    <link href="assets/style-2.css" rel="stylesheet">
-    <link href="assets/font-awesome.min.css" rel="stylesheet">
+    
+    <!-- CSS -->
+    <link rel="preload" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh">
+    <link rel="preload" href="assets/style-2.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="assets/font-awesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
-    <title>Qian Liu @ TikTok (Updated on Jan. 2025) </title>
+    <noscript>
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+        <link href="assets/style-2.css" rel="stylesheet">
+        <link href="assets/font-awesome.min.css" rel="stylesheet">
+    </noscript>
+
+    <title>Qian Liu @ TikTok (Updated on Jan. 2025)</title>
 </head>
 <body>
-<!-- <h1>Hello, world!</h1> -->
 <div class="container pt-5 allstuffp">
     <div class="row pt-5 allstuff">
         <div class="col-md-4 pt-5">
             <div class="fixed-posi">
                 <p class="name">Qian Liu (刘乾)</p>
-                <img class="profilepic pt-3 pb-2" src="images/profile.png">
+                <img class="profilepic pt-3 pb-2" src="images/profile.png" alt="Profile photo" loading="lazy">
                 <div class="pt-5 menur">
                     <i aria-hidden="true" class="fa fa-user-circle"></i>
-                    <a class="menulink" href="assets/qian_cv.pdf" target="_blank">Resume</a></div>
+                    <a class="menulink" href="assets/qian_cv.pdf" target="_blank" rel="noopener">Resume</a></div>
                 <div class="">
                     <i aria-hidden="true" class="fa fa-graduation-cap"></i>
-                    <a class="menulink" href="https://scholar.google.com/citations?user=bcbeUo0AAAAJ&hl=en"
-                                 target="_blank">Scholar</a></div>
+                    <a class="menulink" href="https://scholar.google.com/citations?user=bcbeUo0AAAAJ&hl=en" target="_blank" rel="noopener">Scholar</a></div>
                 <div class="">
                     <i aria-hidden="true" class="fa fa-envelope"></i>
-                    <a class="menulink" href="mailto:liuqian.sea@gmail.com" target="_blank">
-                        Email</a>
+                    <a class="menulink" href="mailto:liuqian.sea@gmail.com">Email</a>
                 </div>
                 <div class="">
                     <i aria-hidden="true" class="fa fa-github"></i>
-                    <a class="menulink" href="https://github.com/SivilTaram" target="_blank">Github</a></div>
+                    <a class="menulink" href="https://github.com/SivilTaram" target="_blank" rel="noopener">Github</a></div>
                 <div class="">
                     <i aria-hidden="true" class="fa fa-linkedin"></i>
-                    <a class="menulink" href="https://www.linkedin.com/in/SivilTaram/" target="_blank">Linkedin</a>
+                    <a class="menulink" href="https://www.linkedin.com/in/SivilTaram/" target="_blank" rel="noopener">Linkedin</a>
                 </div>
                 <div class="">
                     <i aria-hidden="true" class="fa fa-twitter"></i>
-                    <a class="menulink" href="https://twitter.com/sivil_taram" target="_blank">Twitter</a>
+                    <a class="menulink" href="https://twitter.com/sivil_taram" target="_blank" rel="noopener">Twitter</a>
                 </div>
             </div>
         </div>
         <div class="col-md-8 pt-5 about">
                 I am currently a Researcher at 
                 <span style="display: inline-flex; align-items: center;">
-                  <svg width="18px" height="18px" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin-right: 2px;">
+                  <svg width="18" height="18" viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" style="margin-right: 2px;">
                     <g id="Icon/Social/tiktok-color" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                       <g id="Group-7" transform="translate(8.000000, 6.000000)">
                         <path d="M29.5248245,9.44576327 C28.0821306,9.0460898 26.7616408,8.29376327 25.6826204,7.25637551 C25.5109469,7.09719184 25.3493143,6.92821224 25.1928245,6.75433469 C23.9066204,5.27833469 23.209151,3.38037551 23.2336408,1.42290612 L17.3560898,1.42290612 L17.3560898,23.7086204 C17.3560898,27.7935184 15.1520082,29.9535184 12.416498,29.9535184 C11.694049,29.9611102 10.9789469,29.8107429 10.3213959,29.5124571 C9.6636,29.2144163 9.07951837,28.7758041 8.60955918,28.2272327 C8.1398449,27.6789061 7.79551837,27.0340898 7.60180408,26.3385796 C7.4078449,25.6430694 7.36890612,24.9132735 7.48743673,24.2008653 C7.60596735,23.4884571 7.87902857,22.8105796 8.28751837,22.2154776 C8.69625306,21.6198857 9.23037551,21.1212735 9.85241633,20.7546612 C10.474702,20.3878041 11.1694776,20.1617633 11.8882531,20.0924571 C12.6070286,20.023151 13.3324163,20.1122939 14.0129878,20.3535184 L14.0129878,14.3584163 C13.4889061,14.2430694 12.9530694,14.1862531 12.416498,14.1894367 L12.3917633,14.1894367 C10.2542939,14.1943347 8.16604898,14.8325388 6.39127347,16.0234776 C4.61649796,17.2149061 3.23429388,18.9051918 2.41976327,20.8812735 C1.60523265,22.8578449 1.39486531,25.0310694 1.8151102,27.1269061 C2.2351102,29.2227429 3.2671102,31.1469061 4.78033469,32.6564571 C6.29380408,34.1660082 8.22066122,35.1933551 10.3174776,35.6082122 C12.4142939,36.0230694 14.5870286,35.8073143 16.561151,34.9878857 C18.5355184,34.1682122 20.2226204,32.7820898 21.409151,31.0041306 C22.5959265,29.2264163 23.2289878,27.136702 23.228498,24.9992327 L23.228498,12.8155592 C25.5036,14.392702 28.2244163,15.134498 31.1289061,15.1886204 L31.1289061,9.68551837 C30.5869469,9.66568163 30.049151,9.5851102 29.5248245,9.44576327" id="Fill-1" fill="#FE2C55"></path>
@@ -63,32 +67,33 @@
                     </g>
                   </svg>
                   I am currently a Researcher at 
-                  <a class="in-text" href="https://lifeattiktok.com/search/7360907590663932170">TikTok AI Innovation Center</a>
+                  <a class="in-text" href="https://lifeattiktok.com/search/7360907590663932170" target="_blank" rel="noopener">TikTok AI Innovation Center</a>
                 </span> in Singapore 🇸🇬, where we are doing cutting-edge AI research in large language models, multimodal systems, and <bold>code intelligence</bold> 💻. As the head of the code research team, I drive innovations in automated programming, code understanding, and developer productivity tools. Our research focuses on advancing the state-of-the-art in code generation, program synthesis, and intelligent code analysis systems. Prior to TikTok, I led the development of multilingual language models (Sailor and Sailor2) as a Research Scientist at Sea AI Lab 🌊.
 
             <br><br>
             <blockquote style="border-left: 4px solid grey; padding-left: 10px; margin: 0 5px">
-                🚀 We're growing our code research team and actively recruiting Researchers and Research Engineers! If you're passionate about advancing the frontier of code intelligence and large language models, we'd love to hear from you. We offer competitive compensation and an excellent research environment in Singapore. Feel free to reach out via email: qian dot liu at bytedance dot com ✉️
+                🚀 We're growing our code research team and actively recruiting Researchers and Research Engineers! If you're passionate about advancing the frontier of code intelligence and large language models, we'd love to hear from you. We offer competitive compensation and an excellent research environment (based in Singapore / Beijing / Shanghai). Feel free to reach out via email: qian dot liu at bytedance dot com ✉️
             </blockquote>
             <br>
             My primary research interests lie in natural language processing, with a focus on <i class="fa fa-file-code-o" aria-hidden="true"></i> code intelligence and generation, <i class="fa fa-table" aria-hidden="true"></i> structured data understanding, and <i class="fa fa-magic" aria-hidden="true"></i> natural language reasoning.
-            I completed my Ph.D. through a joint program between <a class="in-text" href="https://ev.buaa.edu.cn/" target="_blank">Beihang University</a> and <a class="in-text" href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/" target="_blank">Microsoft Research Asia</a>, where I was fortunate to be advised by <a class="in-text" href="https://www.microsoft.com/en-us/research/people/jlou/" target="_blank">Jian-Guang Lou</a> and <a class="in-text" href="https://www.microsoft.com/en-us/research/people/beichen/" target="_blank">Bei Chen</a>. My doctoral research focused on semantic parsing - a challenging area that bridges natural language understanding and program synthesis by <em>translating natural language instructions into executable formal programs</em>. In my <a class="in-text" href="slides/Thesis-Qian.pdf" target="_blank">thesis</a>, I introduced novel approaches for building semantic parsing systems that are efficient, generalizable, and interactive.
+            I completed my Ph.D. through a joint program between <a class="in-text" href="https://ev.buaa.edu.cn/" target="_blank" rel="noopener">Beihang University</a> and <a class="in-text" href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/" target="_blank" rel="noopener">Microsoft Research Asia</a>, where I was fortunate to be advised by <a class="in-text" href="https://www.microsoft.com/en-us/research/people/jlou/" target="_blank" rel="noopener">Jian-Guang Lou</a> and <a class="in-text" href="https://www.microsoft.com/en-us/research/people/beichen/" target="_blank" rel="noopener">Bei Chen</a>. My doctoral research focused on semantic parsing - a challenging area that bridges natural language understanding and program synthesis by <em>translating natural language instructions into executable formal programs</em>. In my <a class="in-text" href="slides/Thesis-Qian.pdf" target="_blank" rel="noopener">thesis</a>, I introduced novel approaches for building semantic parsing systems that are efficient, generalizable, and interactive.
             <br><br>
 
-            Prior to my research career, I served as a lead teaching assistant for several foundational computer science courses, including Computer Organization, Operating Systems, and Software Engineering. During this time, I authored a comprehensive <a class="in-text" href="https://github.com/SivilTaram/BUAAOS-guide-book">Operating Systems Laboratory Manual</a> that has helped guide students through hands-on system programming exercises.
-            In 2017, recognizing the need for structured mentorship, I founded S.T.A.R. (<a class="in-text" href="https://www.cnblogs.com/SivilTaram/p/ta_road.html">Student Teaching Assistant Resources</a>), the first undergraduate teaching assistant organization at our university. Through S.T.A.R., I established a mentoring framework to help new teaching assistants develop their pedagogical skills and create a supportive community of student educators.
+            Prior to my research career, I served as a lead teaching assistant for several foundational computer science courses, including Computer Organization, Operating Systems, and Software Engineering. During this time, I authored a comprehensive <a class="in-text" href="https://github.com/SivilTaram/BUAAOS-guide-book" rel="noopener">Operating Systems Laboratory Manual</a> that has helped guide students through hands-on system programming exercises.
+            In 2017, recognizing the need for structured mentorship, I founded S.T.A.R. (<a class="in-text" href="https://www.cnblogs.com/SivilTaram/p/ta_road.html" rel="noopener">Student Teaching Assistant Resources</a>), the first undergraduate teaching assistant organization at our university. Through S.T.A.R., I established a mentoring framework to help new teaching assistants develop their pedagogical skills and create a supportive community of student educators.
             <br><br>
 
-            For more details, check my <a class="in-text" href="assets/qian_cv.pdf" target="_blank">CV</a> or hit me up
+            For more details, check my <a class="in-text" href="assets/qian_cv.pdf" target="_blank" rel="noopener">CV</a> or hit me up
             on my <a class="in-text" href="mailto:liuqian.sea@gmail.com">email</a>.
             <br>
             <p class="header pt-5">✨ News </p>
-            <p class="paper my-2 pl-2">[2024.12] <img class="img-fluid instilogo p-1" src="images/new.gif" style="height: 1.5em;">We have presented Scaling Laws with Vocabulary paper in NeurIPS 2024!</p>
-            <p class="paper my-2 pl-2">[2024.11] <img class="img-fluid instilogo p-1" src="images/new.gif" style="height: 1.5em;">Please checkout our <a href="https://arxiv.org/abs/2411.04905">OpenCoder</a>, the open cookbook for top-tier code large language models!</p>
-            <!-- <p class="paper my-2 pl-2">[2022.05] 2 papers (open-domain question answering & task-oriented dialogue) got accepted by IJCAI 2022!</p> -->
-            <!-- <p class="paper my-2 pl-2">[2021.12] 1 paper on table pre-training got accepted by ICLR 2022!</p> -->
-            <p class="header pt-5">📝 Selected Publications (Full Publications on <a class="in-text" href="https://scholar.google.com/citations?user=bcbeUo0AAAAJ&hl=en"><span style="color: black !important;">Google Scholar</span></a>) </p>
+            <p class="paper my-2 pl-2">[2024.11] <img class="img-fluid instilogo p-1" src="images/new.gif" style="height: 1.5em;" alt="New">Spider 2.0 is out! Check out our new paper on evaluating language models on real-world enterprise text-to-SQL workflows!</p>
+            <p class="paper my-2 pl-2">[2024.11] <img class="img-fluid instilogo p-1" src="images/new.gif" style="height: 1.5em;" alt="New">Checkout our <a href="https://arxiv.org/abs/2411.04905">OpenCoder</a>, the open cookbook for top-tier code large language models!</p>
+            <p class="paper my-2 pl-2">[2024.09] <img class="img-fluid instilogo p-1" src="images/new.gif" style="height: 1.5em;" alt="New">Check out Programming Every Example (ProX), our work on scaling data quality improvements!</p>
+            <p class="paper my-2 pl-2">[2024.07] <img class="img-fluid instilogo p-1" src="images/new.gif" style="height: 1.5em;" alt="New">Our RegMix paper and Scaling Laws with Vocabulary paper are available on arXiv!</p>
+            <p class="paper my-2 pl-2">[2024.06] <img class="img-fluid instilogo p-1" src="images/new.gif" style="height: 1.5em;" alt="New">We released BigCodeBench, a new benchmark for evaluating code generation!</p>
 
+            <p class="header pt-5">📝 Selected Publications (Full Publications on <a class="in-text" href="https://scholar.google.com/citations?user=bcbeUo0AAAAJ&hl=en" rel="noopener"><span style="color: black !important;">Google Scholar</span></a>) </p>
 
             <div class="py-2">
                 <p class="paper my-2 pl-2">
@@ -545,22 +550,22 @@
 
             <div class="row text-center py-4">
                 <div class="mx-auto mt-2">
-                    <img class="img-fluid instilogo p-1" src="images/buaa_logo.png">
+                    <img class="img-fluid instilogo p-1" src="images/buaa_logo.png" alt="BUAA Logo" loading="lazy">
                     <div class="institution">Beihang University</div>
                     <div class="years">2013 - 2017</div>
                 </div>
                 <div class="mx-auto mt-2">
-                    <img class="img-fluid instilogo p-3" src="images/ms_logo.png">
+                    <img class="img-fluid instilogo p-3" src="images/ms_logo.png" alt="Microsoft Logo" loading="lazy">
                     <div class="institution">Microsoft Research Asia</div>
                     <div class="years">2017 - 2022</div>
                 </div>
                 <div class="mx-auto mt-2">
-                    <img class="img-fluid instilogo p-2" src="images/sail_logo.png">
+                    <img class="img-fluid instilogo p-2" src="images/sail_logo.png" alt="SAIL Logo" loading="lazy">
                     <div class="institution">Sea AI Lab</div>
                     <div class="years">2022 - 2024</div>
                 </div>
                 <div class="mx-auto mt-2">
-                    <img class="img-fluid instilogo p-2" src="images/tiktok_logo.png">
+                    <img class="img-fluid instilogo p-2" src="images/tiktok_logo.png" alt="TikTok Logo" loading="lazy">
                     <div class="institution">TikTok</div>
                     <div class="years">2024 - Present</div>
                 </div>
@@ -571,19 +576,16 @@
     </div>
 </div>
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script crossorigin="anonymous"
+<!-- Scripts -->
+<script defer crossorigin="anonymous"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-<script crossorigin="anonymous"
+<script defer crossorigin="anonymous"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-<script crossorigin="anonymous"
+<script defer crossorigin="anonymous"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-<script src="assets/style-2.js"></script>
+<script defer src="assets/style-2.js"></script>
 </body>
-<style>
-</style>
 </html>
